<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:id="@+id/container_scroll_viewX"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <GridLayout
            android:id="@+id/gridview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:columnWidth="90sp"
            android:numColumns="auto_fit"
            android:verticalSpacing="10sp"
            android:horizontalSpacing="10sp"
            android:stretchMode="columnWidth"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/links"
                android:id="@+id/info1"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"
                android:textSize="22sp"
                android:layout_column="0"
                android:layout_row="0"
                android:layout_columnSpan="2"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30sp"
                android:padding="10dp"
                android:layout_marginStart="30dp" />

            <TextView
                android:layout_column="0"
                android:layout_row="1"
                android:layout_marginTop="0sp"
                android:padding="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/link1"
                android:id="@+id/info2"
                android:textSize="18sp"
                android:layout_gravity="start|center_vertical"
                android:layout_marginStart="60dp"/>

            <ImageButton
                android:id="@+id/imageButton_ms_app"
                android:src="@drawable/common_ic_googleplayservices"
                android:background="@android:color/transparent"
                android:padding="10dp"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:contentDescription="@string/google_play_icon"
                android:onClick="startMsApp"
                android:layout_row="1"
                android:layout_column="1"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:text="@string/link2"
                android:id="@+id/info3"
                android:textSize="18sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="2"
                android:layout_column="0"
                android:padding="10dp"
                android:layout_gravity="start|center_vertical"
                android:layout_marginStart="60dp"/>

            <ImageButton
                android:id="@+id/imageButton_mensa_app"
                android:src="@drawable/common_ic_googleplayservices"
                android:background="@android:color/transparent"
                android:padding="10dp"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:contentDescription="@string/google_play_icon"
                android:layout_gravity="center_horizontal"
                android:onClick="startMensaApp"
                android:layout_row="2"
                android:layout_column="1" />
        </GridLayout>

        <TextView
            android:text="@string/map1"
            android:id="@+id/info11"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold"
            android:textSize="22sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:padding="10dp"
            android:layout_gravity="center"/>

        <TextView
            android:text="@string/map2"
            android:id="@+id/info12"
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="0sp"
            android:padding="10dp"
            android:layout_marginStart="20dp"
            android:layout_gravity="center"/>

        <ImageView
            android:id="@+id/imageView2"
            android:src="@drawable/torminbruecke"
            android:layout_width="300dp"
            android:layout_height="284dp"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/torminbruecke"
            android:layout_marginTop="2pt"
            android:layout_marginStart="20dp" />

        <Button
            android:text="@string/back_btn"
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textAllCaps="false"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="20dp"/>

    </LinearLayout>


</ScrollView>
